FEATURE: Refactor to use namespaces, add unit tests

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,4 +1,6 @@
 Injector:
+  LoggerBridge:
+    class: 'Camspiers\\LoggerBridge\\LoggerBridge'
   RequestProcessor:
     class: RequestProcessor
     properties:
