--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,25 @@
 {
-    "name": "camspiers/silverstripe-loggerbridge",
-    "description": "Provides a bridge between PSR-3 loggers (like monolog) and SilverStripe",
-    "type": "silverstripe-module",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Cam Spiers",
-            "email": "cameron@heyday.co.nz",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "composer/installers": "~1.0",
-        "monolog/monolog": "~1.5.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~3.7"
-    }
+	"name": "camspiers/silverstripe-loggerbridge",
+	"description": "Provides a bridge between PSR-3 loggers (like monolog) and SilverStripe",
+	"type": "silverstripe-module",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Cam Spiers",
+			"email": "cameron@heyday.co.nz",
+			"role": "Developer"
+		}
+	],
+	"autoload": {
+		"psr-0": { "Camspiers\\LoggerBridge": "src/" }
+	},
+	"require": {
+		"composer/installers": "~1.0",
+		"monolog/monolog": "~1.5.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "~3.7",
+		"symfony/class-loader": "~2.3",
+		"silverstripe/framework": "3.1.*@dev"
+	}
 }
