UPDATE: Use correct classname

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,6 +1,6 @@
 Injector:
   LoggerBridge:
-    class: 'Camspiers\\LoggerBridge\\LoggerBridge'
+    class: 'Camspiers\LoggerBridge\LoggerBridge'
   RequestProcessor:
     class: RequestProcessor
     properties:
