--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
 		"phpunit/phpunit": "~3.7",
 		"symfony/class-loader": "~2.3",
 		"silverstripe/framework": "3.1.*@dev"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "0.3.x-dev"
+		}
 	}
 }
