--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	},
 	"require": {
 		"composer/installers": "~1.0",
-		"monolog/monolog": "~1.5.0"
+		"monolog/monolog": "~1.5.0",
+		"filp/whoops": "1.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7",
