Explanation of how to display errors using SilverStripe

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -23,6 +23,11 @@ Injector:
     constructor:
       0: '%$LoggerBridgeWhoopsPrettyHandler'
       1: '%$LoggerBridgeEnvReporter'
+
+  LoggerBridgeDebugErrorReporter:
+    class: Camspiers\LoggerBridge\ErrorReporter\DebugErrorReporter
+    constructor:
+      0: '%$LoggerBridgeEnvReporter'
   
   RequestProcessor:
     class: RequestProcessor
