MINOR: remove lock file from project

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	},
 	"require": {
 		"composer/installers": "~1.0",
-		"monolog/monolog": "~1.7",
+		"monolog/monolog": "^1.7",
 		"filp/whoops": "1.*"
 	},
 	"require-dev": {
