--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"require": {
 		"composer/installers": "~1.0",
 		"monolog/monolog": "^1.7",
-		"filp/whoops": "1.*"
+		"filp/whoops": "^2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7",
