--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
 	"require": {
 		"composer/installers": "~1.0",
 		"monolog/monolog": "^1.7",
-		"filp/whoops": "^2.0"
+		"filp/whoops": "^2.0",
+		"silverstripe/framework": "^3.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7",
-		"symfony/class-loader": "~2.3",
-		"silverstripe/framework": "3.1.*@dev"
+		"symfony/class-loader": "~2.3"
 	},
 	"extra": {
 		"branch-alias": {
