--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
 	},
 	"require": {
 		"composer/installers": "~1.0",
-		"monolog/monolog": "^1.7",
 		"filp/whoops": "^2.0",
-		"silverstripe/framework": "^3.1"
+		"silverstripe/framework": "^3.1",
+		"psr/log": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7",
-		"symfony/class-loader": "~2.3"
+		"symfony/class-loader": "~2.3",
+		"monolog/monolog": "^1.11"
 	},
 	"extra": {
 		"branch-alias": {
